--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
 
     <!-- Build out the front end UI with inputs and buttons -->
+
+    <h1 id="main-heading">Tip Calculator</h1>
+
+    <div class="calculator-wrapper">
+        <input id="price-input" placeholder="Bill Amount" type="text">
+
+        <br>
+        
+        <!-- put a drop down menu asking how the food was. If it was fantasitc 20% good 18% and so on -->
+            <!-- If user does drop down good, just calculate good auto -->
+
+        <!-- Drop down -->
+        <div class="btn-group">
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
+                  How was your meal?
+            </button>
+            <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
+              <button class="dropdown-item" type="button">Fantastic 20%</button>
+              <button class="dropdown-item" type="button">Good 15%</button>
+              <button class="dropdown-item" type="button">Not very pleased 10%</button>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
