--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./images/corbin-logo1.png">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Document</title>
+    <title>Tip Calculator</title>
 </head>
 <body>
 
@@ -16,24 +15,27 @@
 
     <div class="calculator-wrapper">
         <input id="price-input" placeholder="Bill Amount" type="text">
-
         <br>
-        
-        <!-- put a drop down menu asking how the food was. If it was fantasitc 20% good 18% and so on -->
-            <!-- If user does drop down good, just calculate good auto -->
+        <!-- Start of drop down code -->
+        <select id="serviceQual">
+                <option disabled selected value="0">Choose an Option</option>
+                <option value="0.3">30; Excellent</option>
+                <option value="0.2">20 Great</option>
+                <option value="0.15">15 It was OK</option>
+                <option value="0.1">10 Bad</option>
+        </select>
+        <!-- End of drop down code -->
+        <br>
+        <input id="tip-percentage" placeholder="Percent of Tip" type="text">
+        <br>
+        <button id="calculate-total">Calculate!</button>
 
-        <!-- Drop down -->
-        <div class="btn-group">
-            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" data-display="static" aria-haspopup="true" aria-expanded="false">
-                  How was your meal?
-            </button>
-            <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg-left">
-              <button class="dropdown-item" type="button">Fantastic 20%</button>
-              <button class="dropdown-item" type="button">Good 15%</button>
-              <button class="dropdown-item" type="button">Not very pleased 10%</button>
-            </div>
-        </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="./calc.js" type="text/javascript"></script>
+
+
     
 </body>
 </html>
