--- a/app/index.html
+++ b/app/index.html
@@ -1,41 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/corbin-logo1.png">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Tip Calculator</title>
 </head>
+
 <body>
 
-    <!-- Build out the front end UI with inputs and buttons -->
 
-    <h1 id="main-heading">Tip Calculator</h1>
+    <div class="card" style="width: 18rem;">
+        <div class="card-body">
+            <h1 id="main-heading">Tip Calculator</h1>
 
-    <div class="calculator-wrapper">
-        <input id="price-input" placeholder="Bill Amount" type="text">
-        <br>
-        <!-- Start of drop down code -->
-        <select id="serviceQual">
-                <option disabled selected value="0">Choose an Option</option>
-                <option value="0.3">30; Excellent</option>
-                <option value="0.2">20 Great</option>
-                <option value="0.15">15 It was OK</option>
-                <option value="0.1">10 Bad</option>
-        </select>
-        <!-- End of drop down code -->
-        <br>
-        <input id="tip-percentage" placeholder="Percent of Tip" type="text">
-        <br>
-        <button id="calculate-total">Calculate!</button>
+            <div class="calculator-wrapper">
+                <input id="price-input" placeholder="Bill Amount" type="text">
+                <br>
 
+                <!-- Start of drop down code -->
+                <select id="tipVal">
+                    <option disabled selected value="0">Choose an Option</option>
+                    <option value="0.3">30% Excellent</option>
+                    <option value="0.2">20% Great</option>
+                    <option value="0.15">15% It was OK</option>
+                    <option value="0.1">10% Bad</option>
+                </select>
+                <!-- End of drop down code -->
+                <br>
+                <button id="calculate-total">Calculate!</button>
+
+                <h2 id="result"></h2>
+
+            </div>
+        </div>
     </div>
+
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="./calc.js" type="text/javascript"></script>
 
-
-    
 </body>
+
 </html>
