calculator done, thinking of adding an API to leave reviews as well

--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,7 @@
                 </select>
                 <!-- End of drop down code -->
                 <br>
-                <button id="calculate-total">Calculate!</button>
+                <button id="calculate-total">CALCULATE</button>
 
                 <h2 id="result"></h2>
 
